<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BleedOutActivity">

    <Button
        android:id="@+id/button_give"
        android:layout_width="167dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp"
        android:text="@string/give_up"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="368dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:textSize="24sp"
        android:text="@string/incapacitated" />

    <Button
        android:id="@+id/button_aid"
        android:layout_width="167dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="157dp"
        android:text="@string/use_a_first_aid" />
</RelativeLayout>